--- a/index.html
+++ b/index.html
@@ -4,11 +4,45 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
 	<div id="app">
-		<h1>{{name}}</h1>
+		<div class="all">
+			<div class="container">
+				<h1>CRUD Application</h1>
+				<p>Telegram Channel: <a href="https://t.me/TheNewGenius">The New Genius 🇵🇸</a></p>
+				<div align="right"><button class="btn btn-success">Add +</button></div>
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>Id</th>
+							<th>Username</th>
+							<th>Password</th>
+							<th>Actions</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr v-for="user in users">
+							<td>
+								{{user.id}}
+							</td>
+							<td>
+								{{user.username}}
+							</td>
+							<td>
+								{{user.password}}
+							</td>
+							<td>
+								<a class="btn btn-warning">Edit</a>
+								<a class="btn btn-danger">Delete</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</div>
 	
 </body>
